--- a/style.css
+++ b/style.css
@@ -1,7 +1,39 @@
-.caixaTexto{
+.conteudo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.botoes{
     width: 500px;
-    height: 200px;
-    border: solid 1px black;
+    margin-bottom: 10px;
+}
+.texto{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    color: white;
+}
+button:hover{
+    background-color: #326080;
+}
+button, select, input{
+    margin: 3px 0px;
+    padding: 5px;
+    color: white;
+    background-color: #284B63;
+    box-shadow: none;
+    border-radius: 4px;
+    border: none;
+}
+.caixaTexto{
+    display: block;
+    background-color: #224053;
+    border: none #224053;
     border-radius: 5px;
     padding: 3px;
+}
+body, html{
+    height: 100%;
+    background-color: #153243;
 }
