--- a/style.css
+++ b/style.css
@@ -1,39 +1,66 @@
 .conteudo{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+    display: grid;
+    grid-template-columns: 510px;
+    grid-template-rows: 120px 300px;
+    grid-template-areas: "botoes" "conteudo";
 }
 .botoes{
-    width: 500px;
-    margin-bottom: 10px;
+    grid-area: botoes;
+    width: 506px;
+    padding: 10px;
+    border-radius: 10px 10px 0px 0px;
+    background-color: #1f2224;
 }
 .texto{
+    align-self: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     color: white;
 }
 button:hover{
-    background-color: #326080;
+    background-color: #303335;
 }
 button, select, input{
+    outline: none;
     margin: 3px 0px;
     padding: 5px;
     color: white;
-    background-color: #284B63;
+    background-color: #1f2224;
     box-shadow: none;
     border-radius: 4px;
     border: none;
 }
 .caixaTexto{
-    display: block;
-    background-color: #224053;
-    border: none #224053;
-    border-radius: 5px;
+    grid-area: conteudo;
+    width: 506px;
+    background-color: #1f2224;
+    border: transparent;
+    border-radius: 0px 0px 10px 10px;
     padding: 3px;
+    overflow-x: scroll;
 }
 body, html{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
-    background-color: #153243;
 }
+html{
+    background-image: linear-gradient(to right,#1f2120,#25282b );
+}
+
+::-webkit-scrollbar {
+    width:10px;
+    height: 10px;
+    }
+     
+    /* aqui é para personalizar o fundo da barra, neste caso estou colocando um fundo cinza escuro*/
+    ::-webkit-scrollbar-track {
+    background:#333;
+    }
+     
+    /* aqui é a alça da barra, que demonstra a altura que você está na página
+    estou colocando uma cor azul clara nela*/
+    ::-webkit-scrollbar-thumb {
+    background: #2e9dd8;
+    }
